<resources>
    <string name="app_name">ToDoList</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="all">"全て"</string>
    <string name="day">"今日"</string>
    <string name="week">"今週"</string>
    <string name="month">"今月"</string>
    <string name="star">"重要"</string>
    <string name="category">"カテゴリ"</string>
    <string name="shopping">"買い物"</string>
    <string name="assignment">"課題"</string>
    <string name="sort_number">残数で並び替え</string>
    <string name="sort_category">カテゴリごと</string>
</resources>
