<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_all"
            android:icon="@drawable/all"
            android:title="@string/all" />
        <item
            android:id="@+id/nav_day"
            android:icon="@drawable/day"
            android:title="@string/day" />
        <item
            android:id="@+id/nav_week"
            android:icon="@drawable/week"
            android:title="@string/week" />
        <item
            android:id="@+id/nav_month"
            android:icon="@drawable/month"
            android:title="@string/month" />
        <item
            android:id="@+id/nav_star"
            android:icon="@drawable/star"
            android:title="@string/star" />
    </group>

    <item android:title="@string/category">
        <menu>
            <item
                android:id="@+id/nav_shopping"
                android:icon="@drawable/shopping"
                android:title="@string/shopping" />
            <!--<item
                android:id="@+id/nav_assignment"
                android:icon="@drawable/assignment"
                android:title="@string/assignment" />-->
        </menu>
    </item>

</menu>
